--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@ng-select/ng-select": "^9.0.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "mapbox-gl": "^2.10.0",
+    "query-string": "^7.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -42,9 +45,13 @@
     "@nrwl/node": "14.8.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.8.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
+    "@types/mapbox-gl": "^2.7.6",
     "@types/node": "16.11.7",
+    "@types/query-string": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.0",
